--- a/app/src/main/res/layout/activity_about_us.xml
+++ b/app/src/main/res/layout/activity_about_us.xml
@@ -59,14 +59,14 @@
         android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
-           android:text="QQ客服：434948495"
+           android:text="QQ客服：2881583625"
            android:textColor="@color/black"
            android:layout_marginLeft="30dp"
            android:textSize="16sp"
            android:layout_height="wrap_content" />
         <TextView
            android:layout_width="wrap_content"
-           android:text="易钻邮箱：434948495@qq.com"
+           android:text="易钻邮箱：chuanqi@yzatm.com"
            android:textColor="@color/black"
             android:layout_marginTop="5dp"
            android:layout_marginLeft="30dp"
