--- a/app/src/main/res/layout/activity_task.xml
+++ b/app/src/main/res/layout/activity_task.xml
@@ -24,6 +24,15 @@
             android:id="@+id/textView"
             android:layout_centerVertical="true"
             android:layout_centerHorizontal="true" />
+        <TextView
+            android:id="@+id/tv_help"
+            android:layout_width="wrap_content"
+            android:text="帮助"
+            android:layout_centerVertical="true"
+            android:layout_alignParentRight="true"
+            android:padding="10dp"
+            android:textColor="@color/white"
+            android:layout_height="wrap_content" />
         <RelativeLayout
             android:id="@+id/rtl_back"
             android:layout_width="60dp"
@@ -36,7 +45,7 @@
                 android:layout_height="wrap_content" />
         </RelativeLayout>
     </RelativeLayout>
-    <RelativeLayout
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
         <Views.XListView.XListView
@@ -44,5 +53,6 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
         </Views.XListView.XListView>
-    </RelativeLayout>
+
+    </FrameLayout>
 </LinearLayout>
