--- a/app/src/main/res/layout/activity_withdraw.xml
+++ b/app/src/main/res/layout/activity_withdraw.xml
@@ -50,7 +50,6 @@
             android:textColor="@color/red"
             android:layout_marginLeft="10dp"
             android:layout_width="wrap_content"
-            android:text="100.00"
             android:layout_height="wrap_content" />
         <TextView
             android:layout_toRightOf="@+id/tv_price"
@@ -148,8 +147,8 @@
             android:layout_height="wrap_content" />
         <TextView
             android:layout_width="wrap_content"
-            android:text="(一秒到账)"
-            android:textColor="@color/darks_gray"
+            android:text="(一秒到账,每日仅限10次)"
+            android:textColor="@color/light_black"
             android:layout_centerVertical="true"
             android:textSize="16sp"
             android:layout_toRightOf="@+id/tv_wx"
