--- a/app/src/main/res/layout/activity_yaoqing.xml
+++ b/app/src/main/res/layout/activity_yaoqing.xml
@@ -34,9 +34,10 @@
         android:layout_marginTop="10dp"
         android:layout_height="wrap_content">
         <TextView
-            android:text="输入邀请码进入界面可获赠0.3元红包"
+            android:text="输入邀请码进入界面可获赠0.5元红包"
             android:layout_gravity="center"
             android:textColor="@color/white"
+            android:textSize="15sp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
         <TextView
