--- a/app/src/main/res/layout/item_list_allprofit.xml
+++ b/app/src/main/res/layout/item_list_allprofit.xml
@@ -4,13 +4,14 @@
     android:layout_height="match_parent">
  <RelativeLayout
      android:layout_width="match_parent"
-     android:layout_height="65dp">
+     android:layout_height="70dp">
      <ImageView
          android:id="@+id/img"
-         android:layout_width="50dp"
+         android:layout_width="wrap_content"
          android:layout_centerVertical="true"
+         android:background="@mipmap/y_shouqian"
          android:layout_marginLeft="10dp"
-         android:layout_height="50dp" />
+         android:layout_height="wrap_content" />
      <LinearLayout
          android:layout_width="wrap_content"
          android:orientation="vertical"
