--- a/app/src/main/res/layout/item_top_task.xml
+++ b/app/src/main/res/layout/item_top_task.xml
@@ -5,6 +5,7 @@
     android:orientation="horizontal"
     android:layout_height="100dp">
     <LinearLayout
+        android:id="@+id/ll_top_items"
         android:layout_width="match_parent"
         android:orientation="horizontal"
         android:layout_height="match_parent">
@@ -18,6 +19,7 @@
                 android:layout_width="70dp"
                 android:scaleType="fitXY"
                 android:layout_marginLeft="10dp"
+                android:background="@mipmap/r_shitu"
                 android:layout_marginTop="15dp"
                 android:layout_centerVertical="true"
                 android:layout_marginBottom="15dp"
@@ -27,40 +29,41 @@
                 android:layout_width="wrap_content"
                 android:orientation="vertical"
                 android:layout_marginTop="10dp"
+                android:layout_marginRight="5dp"
                 android:layout_marginBottom="10dp"
                 android:layout_toRightOf="@+id/img_icon"
                 android:layout_height="match_parent">
                 <TextView
                     android:id="@+id/tv_name"
                     android:layout_width="wrap_content"
-                    android:text="欧洲疯狂猜足球"
+                    android:text="师徒任务"
                     android:layout_weight="1"
                     android:textSize="15sp"
                     android:gravity="center"
                     android:textColor="@color/black"
                     android:layout_height="wrap_content" />
+
                 <TextView
                     android:id="@+id/tv_left_num"
                     android:layout_width="wrap_content"
+                    android:text="不限份数"
                     android:textColor="@color/light_black"
                     android:layout_marginTop="3dp"
                     android:gravity="center"
-                    android:textSize="13sp"
+                    android:textSize="14sp"
                     android:layout_weight="1"
                     android:layout_height="wrap_content" />
                 <TextView
                     android:id="@+id/tv_tip"
                     android:layout_width="wrap_content"
-                    android:text="注册并购买1元奖励10现金"
-                    android:singleLine="true"
                     android:layout_marginTop="3dp"
+                    android:text="分享易钻收徒，师傅可以从每个徒弟中获取20元奖励，徒弟越多获得的奖励越多。"
                     android:textColor="@color/red"
                     android:gravity="center|left"
-                    android:textSize="13sp"
+                    android:textSize="12sp"
                     android:layout_weight="1"
                     android:maxEms="12"
                     android:layout_height="wrap_content" />
-
             </LinearLayout>
         </RelativeLayout>
         <RelativeLayout
@@ -74,9 +77,10 @@
             <TextView
                 android:id="@+id/tv_price"
                 android:layout_width="match_parent"
-                android:text="+1元"
+                android:text="无上限"
                 android:textColor="@color/white"
-                android:textSize="16sp"
+                android:textSize="15sp"
+                android:layout_marginRight="10dp"
                 android:layout_alignParentRight="true"
                 android:gravity="center"
                 android:drawablePadding="1dp"
