--- a/app/src/main/res/layout/view_lanner.xml
+++ b/app/src/main/res/layout/view_lanner.xml
@@ -14,6 +14,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
         android:gravity="right"
+        android:visibility="gone"
         android:orientation="horizontal"
         android:padding="8dp" >
     </LinearLayout>
