--- a/app/src/main/res/drawable/progress_round.xml
+++ b/app/src/main/res/drawable/progress_round.xml
@@ -2,10 +2,10 @@
 <animation-list
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:oneshot="false">
-    <!--<item android:drawable="@mipmap/progress_1" android:duration="200"/>-->
-    <!--<item android:drawable="@mipmap/progress_2" android:duration="200"/>-->
-    <!--<item android:drawable="@mipmap/progress_3" android:duration="200"/>-->
-    <!--<item android:drawable="@mipmap/progress_4" android:duration="200"/>-->
+    <item android:drawable="@mipmap/ic_home" android:duration="200"/>
+    <item android:drawable="@mipmap/ic_launcher" android:duration="200"/>
+    <item android:drawable="@mipmap/ic_error" android:duration="200"/>
+    <item android:drawable="@mipmap/ic_get" android:duration="200"/>
     <!--<item android:drawable="@mipmap/progress_5" android:duration="200"/>
     <item android:drawable="@mipmap/progress_6" android:duration="200"/>
     <item android:drawable="@mipmap/progress_7" android:duration="200"/>
