--- a/app/src/main/res/layout/activity_bind_wx.xml
+++ b/app/src/main/res/layout/activity_bind_wx.xml
@@ -83,6 +83,7 @@
             android:layout_width="match_parent"
             android:gravity="center"
             android:padding="5dp"
+            android:inputType="text"
             android:layout_marginTop="10dp"
             android:layout_marginRight="20dp"
             android:layout_gravity="center"
@@ -149,5 +150,6 @@
             android:textSize="18sp"
             android:layout_centerInParent="true"
             android:layout_height="wrap_content" />
+
     </RelativeLayout>
 </LinearLayout>
