--- a/app/src/main/res/layout/activity_fast_task_detail.xml
+++ b/app/src/main/res/layout/activity_fast_task_detail.xml
@@ -4,137 +4,172 @@
     android:background="@drawable/round_white_bg"
     android:layout_marginLeft="25dp"
     android:layout_marginRight="25dp"
+    android:layout_marginBottom="20dp"
     android:orientation="vertical"
     android:layout_height="match_parent">
-  <RelativeLayout
-      android:layout_width="wrap_content"
-      android:layout_marginTop="10dp"
-      android:background="@color/white"
-      android:layout_height="50dp">
-      <TextView
-          android:layout_width="wrap_content"
-          android:textColor="@color/white"
-          android:textSize="18sp"
-          android:layout_centerInParent="true"
-          android:layout_height="wrap_content" />
-      <RelativeLayout
-          android:id="@+id/rtl_back"
-          android:layout_width="60dp"
-          android:onClick="back"
-          android:layout_marginLeft="10dp"
-          android:layout_height="match_parent">
-          <ImageView
-              android:layout_width="wrap_content"
-              android:background="@mipmap/close"
-              android:layout_centerInParent="true"
-              android:layout_height="wrap_content" />
-      </RelativeLayout>
-  </RelativeLayout>
-    <RelativeLayout
-        android:layout_width="wrap_content"
-        android:background="@color/white"
-        android:layout_height="90dp">
-        <ImageView
-            android:id="@+id/img_icon"
-            android:layout_width="80dp"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="30dp"
-            android:scaleType="fitXY"
-            android:layout_height="80dp" />
-        <LinearLayout
-            android:layout_toRightOf="@+id/img_icon"
-            android:layout_width="wrap_content"
-            android:layout_marginBottom="5dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="5dp"
-            android:orientation="vertical"
-            android:layout_height="match_parent">
-            <TextView
-                android:id="@+id/tv_name"
-                android:layout_width="wrap_content"
-                android:text="QQ音乐"
-                android:layout_weight="1"
-                android:textColor="@color/black"
-                android:textSize="18sp"
-                android:gravity="center"
-                android:layout_height="wrap_content" />
-            <TextView
-                android:id="@+id/tv_left_num"
-                android:layout_width="wrap_content"
-                android:layout_weight="1"
-                android:text="剩余数量"
-                android:textColor="@color/red"
-                android:gravity="center"
-                android:layout_height="wrap_content" />
-             <TextView
-                 android:id="@+id/tv_left_time"
-                 android:layout_width="wrap_content"
-                 android:layout_weight="1"
-                 android:gravity="center"
-                 android:layout_height="wrap_content" />
-        </LinearLayout>
+
+    <!--<ScrollView-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:id="@+id/scrollView2" >-->
+
+        <!--<Lisroid:layout_height="match_parent">-->
+            <RelativeLayout
+              android:layout_width="match_parent"
+              android:layout_marginTop="10dp"
+              android:background="@color/white"
+              android:layout_height="50dp">
+              <TextView
+                  android:layout_width="wrap_content"
+                  android:textColor="@color/white"
+                  android:textSize="18sp"
+                  android:layout_centerInParent="true"
+                  android:layout_height="wrap_content" />
+              <RelativeLayout
+                  android:id="@+id/rtl_back"
+                  android:layout_width="60dp"
+                  android:onClick="back"
+                  android:layout_marginLeft="10dp"
+                  android:layout_height="match_parent">
+                  <ImageView
+                      android:layout_width="wrap_content"
+                      android:background="@mipmap/close"
+                      android:layout_centerInParent="true"
+                      android:layout_height="wrap_content" />
+              </RelativeLayout>
+          </RelativeLayout>
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:background="@color/white"
+                android:layout_height="90dp">
+                <ImageView
+                    android:id="@+id/img_icon"
+                    android:layout_width="80dp"
+                    android:layout_centerVertical="true"
+                    android:layout_marginLeft="30dp"
+                    android:scaleType="fitXY"
+                    android:layout_height="80dp" />
+                <LinearLayout
+                    android:layout_toRightOf="@+id/img_icon"
+                    android:layout_width="wrap_content"
+                    android:layout_marginBottom="5dp"
+                    android:layout_alignParentRight="true"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginTop="5dp"
+                    android:orientation="vertical"
+                    android:layout_height="match_parent">
+                    <TextView
+                        android:id="@+id/tv_name"
+                        android:layout_width="wrap_content"
+                        android:text="QQ音乐"
+                        android:layout_weight="1"
+                        android:textColor="@color/black"
+                        android:textSize="18sp"
+                        android:gravity="center"
+                        android:layout_height="wrap_content" />
+                    <TextView
+                        android:id="@+id/tv_left_num"
+                        android:layout_width="wrap_content"
+                        android:layout_weight="1"
+                        android:text="剩余数量"
+                        android:textColor="@color/red"
+                        android:gravity="center"
+                        android:layout_height="wrap_content" />
+                     <TextView
+                         android:id="@+id/tv_left_time"
+                         android:layout_width="wrap_content"
+                         android:layout_weight="1"
+                         android:gravity="center"
+                         android:layout_height="wrap_content" />
+                </LinearLayout>
 
 
-    </RelativeLayout>
-    <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_marginTop="10dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginBottom="10dp"
-        android:layout_height="wrap_content">
-        <TextView
-            android:id="@+id/tv_step"
-            android:textSize="16sp"
-            android:layout_width="wrap_content"
-            android:padding="20dp"
-            android:textColor="@color/black"
-            android:layout_height="wrap_content" />
-    </RelativeLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:orientation="vertical"
-        android:layout_alignParentRight="true"
-        android:layout_height="match_parent">
-        <RelativeLayout
-            android:id="@+id/rtl_accept"
-            android:layout_width="match_parent"
-            android:layout_centerVertical="true"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="5dp"
-            android:layout_marginRight="40dp"
-            android:layout_marginLeft="40dp"
-            android:layout_alignParentRight="true"
-            android:background="@drawable/round_red_bg"
-            android:layout_height="35dp">
-            <TextView
-                android:id="@+id/tv_state"
-                android:layout_width="wrap_content"
-                android:text="接受任务"
-                android:textColor="@drawable/white2gray_seleclor"
-                android:textSize="18sp"
-                android:layout_centerInParent="true"
-                android:layout_height="wrap_content" />
-        </RelativeLayout>
-        <RelativeLayout
-            android:id="@+id/rtl_complite"
-            android:layout_width="match_parent"
-            android:layout_centerVertical="true"
-            android:layout_alignParentRight="true"
-            android:layout_marginBottom="20dp"
-            android:layout_marginTop="5dp"
-            android:layout_marginRight="40dp"
-            android:layout_marginLeft="40dp"
-            android:background="@drawable/round_red_bg"
-            android:layout_height="35dp"
-            >
-            <TextView
-                android:layout_width="wrap_content"
-                android:text="确认完成"
-                android:textColor="@drawable/white2gray_seleclor"
-                android:textSize="18sp"
-                android:layout_centerInParent="true"
-                android:layout_height="wrap_content" />
-        </RelativeLayout>
-    </LinearLayout>
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_marginTop="10dp"
+                android:layout_marginRight="30dp"
+                android:layout_marginLeft="30dp"
+                android:layout_marginBottom="10dp"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:id="@+id/tv_step"
+                    android:textSize="16sp"
+                    android:layout_width="wrap_content"
+                    android:padding="20dp"
+                    android:textColor="@color/black"
+                    android:layout_height="wrap_content" />
+            </RelativeLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:orientation="vertical"
+                android:layout_alignParentRight="true"
+                android:layout_height="match_parent">
+                <RelativeLayout
+                    android:id="@+id/rtl_accept"
+                    android:layout_width="match_parent"
+                    android:layout_centerVertical="true"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="5dp"
+                    android:layout_marginRight="40dp"
+                    android:layout_marginLeft="40dp"
+                    android:layout_alignParentRight="true"
+                    android:background="@drawable/round_red_bg"
+                    android:layout_height="35dp">
+                    <TextView
+                        android:id="@+id/tv_state"
+                        android:layout_width="wrap_content"
+                        android:text="接受任务"
+                        android:textColor="@drawable/white2gray_seleclor"
+                        android:textSize="18sp"
+                        android:layout_centerInParent="true"
+                        android:layout_height="wrap_content" />
+                </RelativeLayout>
+                <RelativeLayout
+                    android:id="@+id/rtl_give_up"
+                    android:layout_width="match_parent"
+                    android:layout_centerVertical="true"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="5dp"
+                    android:layout_marginRight="40dp"
+                    android:layout_marginLeft="40dp"
+                    android:layout_alignParentRight="true"
+                    android:background="@drawable/round_red_bg"
+                    android:layout_height="35dp">
+                    <TextView
+                        android:id="@+id/tv_give_up"
+                        android:layout_width="wrap_content"
+                        android:text="放弃任务"
+                        android:textColor="@drawable/white2gray_seleclor"
+                        android:textSize="18sp"
+                        android:layout_centerInParent="true"
+                        android:layout_height="wrap_content" />
+                </RelativeLayout>
+                <RelativeLayout
+                    android:id="@+id/rtl_complite"
+                    android:layout_width="match_parent"
+                    android:layout_centerVertical="true"
+                    android:layout_alignParentRight="true"
+                    android:layout_marginBottom="20dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginRight="40dp"
+                    android:layout_marginLeft="40dp"
+                    android:background="@drawable/round_red_bg"
+                    android:layout_height="35dp"
+                    >
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:text="确认完成"
+                        android:textColor="@drawable/white2gray_seleclor"
+                        android:textSize="18sp"
+                        android:layout_centerInParent="true"
+                        android:layout_height="wrap_content" />
+                </RelativeLayout>
+            </LinearLayout>
+        <!--</LinearLayout>-->
+    <!--</ScrollView>-->
+
 </LinearLayout>
