--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -1,13 +1,26 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
+    android:background="@color/welcome_bg"
     android:orientation="vertical"
     android:layout_height="match_parent"
     tools:context="Fragments.GetFragment">
     <!-- TODO: Update blank fragment layout -->
-   <ImageView
-       android:layout_width="match_parent"
-       android:scaleType="fitXY"
-       android:background="@mipmap/welcome"
-       android:layout_height="match_parent" />
-</LinearLayout>
+    <!--<WebView-->
+        <!--android:id="@+id/webview"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_centerInParent="true"-->
+        <!--android:layout_height="match_parent"-->
+        <!--/>-->
+    <!--<ImageView-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:background="@mipmap/ic_launcher"-->
+        <!--android:layout_height="match_parent" />-->
+    <Views.GifView
+        android:id="@+id/gif1"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:gif="@mipmap/welcome">
+    </Views.GifView>
+</RelativeLayout>
