--- a/app/src/main/res/layout/activity_kown_platform.xml
+++ b/app/src/main/res/layout/activity_kown_platform.xml
@@ -45,55 +45,55 @@
                android:layout_width="wrap_content"
                android:textSize="17sp"
                android:textColor="@color/black"
-               android:text="易钻ATM是传祺网络科技有限公司首款APP，是一款轻松赚外快，快速攒人脉的APP。"
+               android:text="易钻ATM是传祺网络科技有限公司开发的首款软件，是一款轻松赚钱、并快速积攒人脉的APP。每天都有巨多快速任务等你来赚！邀请好友赚钱，提成高达20元！加入即送2.6元现金！一元提现，实时到账！"
                android:layout_height="wrap_content" />
             <TextView
                 android:layout_width="wrap_content"
                 android:textSize="17sp"
                 android:textColor="@color/black"
-                android:text="功能有：任务赚佣金，聚钱庄理财，疯狂抢红包，一元夺宝，挖宝箱，返利商城，师徒任务。"
+                android:text="功能特点："
                 android:layout_height="wrap_content" />
             <TextView
                 android:layout_width="wrap_content"
                 android:textSize="17sp"
                 android:textColor="@color/black"
                 android:layout_marginTop="10dp"
-                android:text="1．任务赚佣金，分享收徒“坐享其成”。"
+                android:text="1、经典任务、联盟任务、新手任务，让你每日佣金赚不停。"
                 android:layout_height="wrap_content" />
             <TextView
                 android:layout_width="wrap_content"
                 android:textSize="17sp"
                 android:textColor="@color/black"
                 android:layout_marginTop="10dp"
-                android:text="2．完成任务挖宝箱，获取免费赚取苹果6Plus的抽取机会。"
+                android:text="2、特色抢红包功能，既享受抢的乐趣又能轻松赚钱。"
                 android:layout_height="wrap_content" />
             <TextView
                 android:layout_width="wrap_content"
                 android:textSize="17sp"
                 android:textColor="@color/black"
                 android:layout_marginTop="10dp"
-                android:text="3．高佣任务攒本金，投资聚钱庄省钱又生钱，任务多多，自然钱多多，给你更多零花钱。"
+                android:text="3、投资聚钱庄，不一样的理财体验。"
                 android:layout_height="wrap_content" />
             <TextView
                 android:layout_width="wrap_content"
                 android:textSize="17sp"
                 android:textColor="@color/black"
                 android:layout_marginTop="10dp"
-                android:text="4．一元夺奇宝，好货拿不停。"
+                android:text="4、邀请好友成师徒，奖励丰厚，师傅“坐享其成”。"
                 android:layout_height="wrap_content" />
             <TextView
                 android:layout_width="wrap_content"
                 android:textSize="17sp"
                 android:textColor="@color/black"
                 android:layout_marginTop="10dp"
-                android:text="5．商城购物，返利得现金。"
+                android:text="5、师徒大赛，iPhone 7 等你来。"
                 android:layout_height="wrap_content" />
             <TextView
                 android:layout_width="wrap_content"
                 android:textSize="17sp"
                 android:textColor="@color/black"
                 android:layout_marginTop="10dp"
-                android:text="6．逆天运气王，运气王红包抢不停， 5天60次抢红包机会，最高能够得到高于成本115%的回报，小投资大收益，给你抢的乐趣，同时给你高额回报！"
+                android:text="6、“每日签到”，现金奖励，连续签到还有大奖励。"
                 android:layout_height="wrap_content" />
             <RelativeLayout
                 android:id="@+id/rtl_complite"
