--- a/app/src/main/res/layout/activity_user_info.xml
+++ b/app/src/main/res/layout/activity_user_info.xml
@@ -51,8 +51,8 @@
                    android:layout_width="65dp"
                    app:border_width="1dp"
                    app:border_color="@color/gray"
-                   android:background="@mipmap/tx"
                    android:layout_alignParentRight="true"
+                   android:src="@mipmap/ic_empty"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:layout_height="65dp"
@@ -101,7 +101,6 @@
                    android:id="@+id/tv_phone"
                    android:layout_width="wrap_content"
                    android:layout_centerVertical="true"
-                   android:drawableRight="@mipmap/w_tiaozhuan1"
                    android:layout_alignParentRight="true"
                    android:gravity="center"
                    android:drawablePadding="5dp"
@@ -128,8 +127,8 @@
                    android:id="@+id/tv_username"
                    android:layout_width="wrap_content"
                    android:layout_centerVertical="true"
-                   android:drawableRight="@mipmap/w_tiaozhuan1"
                    android:layout_alignParentRight="true"
+                   android:text="易钻ATM"
                    android:gravity="center"
                    android:drawablePadding="5dp"
                    android:layout_marginRight="15dp"
@@ -155,7 +154,6 @@
                    android:layout_width="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="男"
-                   android:drawableRight="@mipmap/w_tiaozhuan1"
                    android:layout_alignParentRight="true"
                    android:gravity="center"
                    android:drawablePadding="5dp"
@@ -211,9 +209,8 @@
                    android:id="@+id/tv_address"
                    android:layout_width="wrap_content"
                    android:layout_centerVertical="true"
-                   android:drawableRight="@mipmap/w_tiaozhuan1"
-                   android:layout_alignParentRight="true"
                    android:gravity="center"
+                   android:layout_alignParentRight="true"
                    android:drawablePadding="5dp"
                    android:layout_marginRight="15dp"
                    android:layout_height="wrap_content"
@@ -225,6 +222,7 @@
                android:layout_height="0.2dp"></View>
            <RelativeLayout
                android:layout_width="match_parent"
+               android:visibility="gone"
                android:layout_height="50dp">
                <TextView
                    android:layout_width="wrap_content"
@@ -238,10 +236,8 @@
                    android:id="@+id/tv_yqm"
                    android:layout_width="wrap_content"
                    android:layout_centerVertical="true"
-                   android:text="未填写"
-                   android:drawableRight="@mipmap/w_tiaozhuan1"
-                   android:layout_alignParentRight="true"
                    android:gravity="center"
+                   android:layout_alignParentRight="true"
                    android:drawablePadding="5dp"
                    android:layout_marginRight="15dp"
                    android:layout_height="wrap_content"
