--- a/app/src/main/res/layout/activity_guide.xml
+++ b/app/src/main/res/layout/activity_guide.xml
@@ -11,26 +11,19 @@
       android:layout_height="match_parent" />
     <RelativeLayout
         android:id="@+id/rtl_complite"
-        android:layout_width="55dp"
+        android:layout_width="65dp"
         android:background="@color/light_black"
         android:layout_gravity="right"
         android:layout_margin="20dp"
-        android:layout_height="30dp">
+        android:layout_height="40dp">
         <TextView
             android:id="@+id/tv_num"
-            android:text="3"
+            android:text="3跳过"
             android:layout_width="wrap_content"
             android:gravity="left"
-            android:layout_marginLeft="10dp"
+            android:layout_marginLeft="15dp"
             android:layout_centerVertical="true"
-            android:textColor="@color/white"
-            android:layout_height="wrap_content" />
-        <TextView
-            android:layout_toRightOf="@+id/tv_num"
-            android:layout_width="wrap_content"
-            android:layout_centerVertical="true"
-            android:textColor="@color/gray"
-            android:text="跳过"
+            android:textColor="@drawable/white2gray_seleclor"
             android:layout_height="wrap_content" />
     </RelativeLayout>
 </FrameLayout>
