--- a/app/src/main/res/layout/activity_img_show.xml
+++ b/app/src/main/res/layout/activity_img_show.xml
@@ -15,19 +15,9 @@
         android:id="@+id/img_show"
         />
     <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:visibility="gone"
-        android:scaleType="fitCenter"
-        android:id="@+id/img_show1"
-        />
-    <TextView
-        android:id="@+id/tv_yqm"
-        android:layout_width="wrap_content"
-        android:textSize="16sp"
-        android:textColor="@color/black"
-        android:layout_gravity="bottom|center"
-        android:layout_marginBottom="40dp"
-        android:layout_marginRight="20dp"
-        android:layout_height="wrap_content" />
+        android:id="@+id/img_qrcode"
+        android:layout_width="100dp"
+        android:layout_marginTop="50dp"
+        android:layout_marginLeft="18dp"
+        android:layout_height="100dp" />
 </FrameLayout>
