--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -80,7 +80,7 @@
                         android:layout_centerInParent="true"
                         android:drawablePadding="2dp"
                         android:gravity="center"
-                        android:drawableTop="@mipmap/ic_get"
+                        android:drawableTop="@mipmap/ic_share"
                         android:text="分享"
                         android:layout_height="wrap_content" />
                 </RelativeLayout>
