--- a/app/src/main/res/layout/activity_newer_task.xml
+++ b/app/src/main/res/layout/activity_newer_task.xml
@@ -44,7 +44,7 @@
                 <ImageView
                     android:id="@+id/img_lj"
                     android:layout_width="wrap_content"
-                    android:background="@mipmap/liaojiepingtai"
+                    android:background="@mipmap/x_liaojie"
                     android:layout_centerVertical="true"
                     android:layout_marginLeft="10dp"
                     android:layout_height="wrap_content" />
@@ -64,23 +64,25 @@
                         android:textSize="15sp"
                         android:layout_weight="1"
                         android:layout_height="wrap_content" />
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:textSize="15sp"
-                        android:layout_weight="1"
-                        android:text="立即获得0.3元奖励"
-                        android:gravity="center"
-                        android:textColor="@color/red"
-                        android:layout_height="wrap_content" />
                 </LinearLayout>
 
-                <ImageView
-                    android:layout_width="wrap_content"
+                <RelativeLayout
+                    android:id="@+id/rtl_ljpt_state"
+                    android:layout_width="80dp"
                     android:layout_centerVertical="true"
-                    android:background="@mipmap/w_tiaozhuan1"
+                    android:background="@drawable/round_red_bg"
                     android:layout_alignParentRight="true"
                     android:layout_marginRight="10dp"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="35dp">
+                    <TextView
+                        android:id="@+id/tv_ljpt_state"
+                        android:layout_width="wrap_content"
+                        android:text="+0.3元"
+                        android:layout_centerInParent="true"
+                        android:textColor="@color/white"
+                        android:textSize="17sp"
+                        android:layout_height="wrap_content" />
+                </RelativeLayout>
             </RelativeLayout>
             <View
                 android:layout_width="match_parent"
@@ -88,6 +90,7 @@
                 android:layout_height="1dp"></View>
             <RelativeLayout
                 android:id="@+id/rtl_bind_wx"
+                android:visibility="gone"
                 android:layout_width="match_parent"
                 android:layout_height="70dp">
                 <ImageView
@@ -130,13 +133,21 @@
                         android:textColor="@color/red"
                         android:layout_height="wrap_content" />
                 </LinearLayout>
-                <ImageView
-                    android:layout_width="wrap_content"
+                <RelativeLayout
+                    android:layout_width="80dp"
                     android:layout_centerVertical="true"
-                    android:background="@mipmap/w_tiaozhuan1"
+                    android:background="@drawable/round_red_bg"
                     android:layout_alignParentRight="true"
                     android:layout_marginRight="10dp"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="35dp">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:text="+0.5元"
+                        android:layout_centerInParent="true"
+                        android:textColor="@color/white"
+                        android:textSize="17sp"
+                        android:layout_height="wrap_content" />
+                </RelativeLayout>
             </RelativeLayout>
             <View
                 android:layout_width="match_parent"
@@ -149,7 +160,7 @@
                 <ImageView
                     android:id="@+id/img_alipay"
                     android:layout_width="wrap_content"
-                    android:background="@mipmap/bangdingzhifubao"
+                    android:background="@mipmap/x_zhifu"
                     android:layout_centerVertical="true"
                     android:layout_marginLeft="10dp"
                     android:layout_height="wrap_content" />
@@ -163,28 +174,30 @@
                     android:layout_height="match_parent">
                     <TextView
                         android:layout_width="wrap_content"
-                        android:text="点击绑定支付宝方便资金提现"
+                        android:text="绑定支付宝"
                         android:gravity="center"
                         android:textColor="@color/black"
                         android:textSize="15sp"
                         android:layout_weight="1"
                         android:layout_height="wrap_content" />
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:textSize="15sp"
-                        android:layout_weight="1"
-                        android:text="立即获得0.5元奖励"
-                        android:gravity="center"
-                        android:textColor="@color/red"
-                        android:layout_height="wrap_content" />
                 </LinearLayout>
-                <ImageView
-                    android:layout_width="wrap_content"
+                <RelativeLayout
+                    android:id="@+id/rtl_bindalipays"
+                    android:layout_width="80dp"
                     android:layout_centerVertical="true"
-                    android:background="@mipmap/w_tiaozhuan1"
+                    android:background="@drawable/round_red_bg"
                     android:layout_alignParentRight="true"
                     android:layout_marginRight="10dp"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="35dp">
+                    <TextView
+                        android:id="@+id/tv_bind_alipay_state"
+                        android:layout_width="wrap_content"
+                        android:text="+0.5元"
+                        android:layout_centerInParent="true"
+                        android:textColor="@color/white"
+                        android:textSize="17sp"
+                        android:layout_height="wrap_content" />
+                </RelativeLayout>
             </RelativeLayout>
             <View
                 android:layout_width="match_parent"
@@ -197,7 +210,7 @@
                 <ImageView
                     android:id="@+id/img_phone"
                     android:layout_width="wrap_content"
-                    android:background="@mipmap/bangdingshouji"
+                    android:background="@mipmap/x_shouji"
                     android:layout_centerVertical="true"
                     android:layout_marginLeft="10dp"
                     android:layout_height="wrap_content" />
@@ -211,36 +224,30 @@
                     android:layout_height="match_parent">
                     <TextView
                         android:layout_width="wrap_content"
-                        android:text="点击绑定手机号码"
+                        android:textSize="15sp"
+                        android:layout_weight="1"
+                        android:text="手机绑定"
                         android:gravity="center"
                         android:textColor="@color/black"
-                        android:textSize="15sp"
-                        android:layout_weight="1"
-                        android:layout_height="wrap_content" />
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:textSize="15sp"
-                        android:layout_weight="1"
-                        android:text="用户账号密码修改"
-                        android:gravity="center"
-                        android:textColor="@color/black"
-                        android:layout_height="wrap_content" />
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:textSize="15sp"
-                        android:layout_weight="1"
-                        android:text="立即获得0.5元奖励"
-                        android:gravity="center"
-                        android:textColor="@color/red"
                         android:layout_height="wrap_content" />
                 </LinearLayout>
-                <ImageView
-                    android:layout_width="wrap_content"
+                <RelativeLayout
+                    android:id="@+id/rtl_bindphones"
+                    android:layout_width="80dp"
                     android:layout_centerVertical="true"
-                    android:background="@mipmap/w_tiaozhuan1"
+                    android:background="@drawable/round_red_bg"
                     android:layout_alignParentRight="true"
                     android:layout_marginRight="10dp"
+                    android:layout_height="35dp">
+                <TextView
+                    android:id="@+id/tv_bind_phone_state"
+                    android:layout_width="wrap_content"
+                    android:text="+0.5元"
+                    android:layout_centerInParent="true"
+                    android:textColor="@color/white"
+                    android:textSize="17sp"
                     android:layout_height="wrap_content" />
+                </RelativeLayout>
             </RelativeLayout>
 
             <View
@@ -254,7 +261,7 @@
                 <ImageView
                     android:id="@+id/img_share"
                     android:layout_width="wrap_content"
-                    android:background="@mipmap/fenxiangpingtai"
+                    android:background="@mipmap/x_fenxiang"
                     android:layout_centerVertical="true"
                     android:layout_marginLeft="10dp"
                     android:layout_height="wrap_content" />
@@ -268,36 +275,28 @@
                     android:layout_height="match_parent">
                     <TextView
                         android:layout_width="wrap_content"
-                        android:text="分享平台到微信好友,朋友圈"
+                        android:text="分享到微信好友,朋友圈等"
                         android:gravity="center"
                         android:textColor="@color/black"
                         android:textSize="15sp"
                         android:layout_weight="1"
-                        android:layout_height="wrap_content" />
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:textSize="15sp"
-                        android:layout_weight="1"
-                        android:text="QQ空间，微博等"
-                        android:gravity="center"
-                        android:textColor="@color/black"
-                        android:layout_height="wrap_content" />
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:textSize="15sp"
-                        android:layout_weight="1"
-                        android:text="立即获得0.3元奖励"
-                        android:gravity="center"
-                        android:textColor="@color/red"
                         android:layout_height="wrap_content" />
                 </LinearLayout>
-                <ImageView
-                    android:layout_width="wrap_content"
+                <RelativeLayout
+                    android:layout_width="80dp"
                     android:layout_centerVertical="true"
-                    android:background="@mipmap/w_tiaozhuan1"
+                    android:background="@drawable/round_red_bg"
                     android:layout_alignParentRight="true"
                     android:layout_marginRight="10dp"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="35dp">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:text="+0.5元"
+                        android:layout_centerInParent="true"
+                        android:textColor="@color/white"
+                        android:textSize="17sp"
+                        android:layout_height="wrap_content" />
+                </RelativeLayout>
             </RelativeLayout>
             <View
                 android:layout_width="match_parent"
