--- a/app/src/main/res/layout/activity_regist.xml
+++ b/app/src/main/res/layout/activity_regist.xml
@@ -2,13 +2,76 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:orientation="vertical"
+    android:background="@color/welcome_bg"
     android:layout_height="match_parent">
-   <View
+
+   <RelativeLayout
        android:layout_width="match_parent"
-       android:background="@color/red"
-       android:layout_height="20dp"></View>
-   <ListView
-       android:id="@+id/list"
+       android:layout_marginTop="80dp"
+       android:layout_height="wrap_content">
+      <TextView
+          android:layout_width="wrap_content"
+          android:text="www.yzatm.com"
+          android:textColor="@color/white"
+          android:layout_centerInParent="true"
+          android:drawableTop="@mipmap/ic_empty"
+          android:drawablePadding="10dp"
+          android:textSize="18sp"
+          android:gravity="center"
+          android:layout_centerVertical="true"
+          android:layout_height="wrap_content" />
+   </RelativeLayout>
+   <RelativeLayout
        android:layout_width="match_parent"
-       android:layout_height="match_parent"></ListView>
+       android:layout_weight="1"
+       android:layout_height="match_parent">
+      <ImageView
+          android:layout_width="wrap_content"
+          android:background="@mipmap/d_wenzi"
+          android:layout_centerVertical="true"
+          android:layout_centerInParent="true"
+          android:layout_height="wrap_content" />
+   </RelativeLayout>
+   <LinearLayout
+       android:layout_width="match_parent"
+       android:orientation="vertical"
+       android:layout_marginBottom="50dp"
+       android:layout_height="130dp">
+      <RelativeLayout
+          android:id="@+id/rtl_wx_regist"
+          android:layout_width="match_parent"
+          android:layout_marginLeft="30dp"
+          android:layout_gravity="center"
+          android:layout_marginBottom="10dp"
+          android:background="@drawable/round_orange_bg"
+          android:layout_marginRight="30dp"
+          android:layout_height="55dp">
+         <TextView
+             android:layout_width="wrap_content"
+             android:text="微信登录"
+             android:textColor="@drawable/white2gray_seleclor"
+             android:textSize="18sp"
+             android:drawableLeft="@mipmap/d_weixin"
+             android:gravity="center"
+             android:drawablePadding="10dp"
+             android:layout_centerVertical="true"
+             android:layout_centerInParent="true"
+             android:layout_height="wrap_content" />
+      </RelativeLayout>
+      <TextView
+          android:layout_width="wrap_content"
+          android:text="泉州市传祺网络科技有限公司"
+          android:layout_gravity="center"
+          android:textColor="@color/white"
+          android:textSize="15sp"
+          android:layout_height="wrap_content" />
+      <TextView
+          android:layout_width="wrap_content"
+          android:text="WWW.YZATM.COM"
+          android:layout_gravity="center"
+          android:layout_marginTop="10dp"
+          android:textColor="@color/white"
+          android:textSize="16sp"
+          android:layout_height="wrap_content" />
+   </LinearLayout>
 </LinearLayout>
