--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -1,26 +1,62 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:background="@color/welcome_bg"
+    android:background="@color/red"
     android:orientation="vertical"
     android:layout_height="match_parent"
     tools:context="Fragments.GetFragment">
     <!-- TODO: Update blank fragment layout -->
-    <!--<WebView-->
-        <!--android:id="@+id/webview"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_centerInParent="true"-->
-        <!--android:layout_height="match_parent"-->
-        <!--/>-->
-    <!--<ImageView-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:background="@mipmap/ic_launcher"-->
-        <!--android:layout_height="match_parent" />-->
-    <Views.GifView
-        android:id="@+id/gif1"
+    <ImageView
+        android:id="@+id/img_logo"
         android:layout_width="match_parent"
+        android:visibility="visible"
+        android:background="@mipmap/welcome"
         android:layout_height="match_parent"
-        app:gif="@mipmap/welcome">
-    </Views.GifView>
-</RelativeLayout>
+        >
+    </ImageView>
+    <FrameLayout
+        android:id="@+id/fl_guide"
+        android:layout_width="match_parent"
+        android:visibility="gone"
+        android:orientation="vertical"
+        android:layout_height="match_parent"
+        >
+        <FrameLayout
+            android:id="@+id/fl_guide_img"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+            <ImageView
+                android:id="@+id/img_guide"
+                android:layout_width="match_parent"
+                android:scaleType="fitXY"
+                android:layout_height="match_parent" />
+            <TextView
+                android:id="@+id/tv_load_guide"
+                android:layout_width="wrap_content"
+                android:text="图片加载中..."
+                android:visibility="visible"
+                android:layout_gravity="center"
+                android:textSize="18sp"
+                android:textColor="@color/white"
+                android:layout_height="wrap_content" />
+        </FrameLayout>
+        <RelativeLayout
+            android:id="@+id/rtl_complite"
+            android:layout_width="65dp"
+            android:background="@color/light_black"
+            android:layout_gravity="right"
+            android:layout_margin="20dp"
+            android:layout_height="40dp">
+            <TextView
+                android:id="@+id/tv_num"
+                android:text="3跳过"
+                android:layout_width="wrap_content"
+                android:gravity="left"
+                android:layout_marginLeft="15dp"
+                android:layout_centerVertical="true"
+                android:textColor="@drawable/white2gray_seleclor"
+                android:layout_height="wrap_content" />
+        </RelativeLayout>
+    </FrameLayout>
+</LinearLayout>
