--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -41,6 +41,20 @@
         <!-- <item name="android:backgroundDimEnabled">false</item> -->  <!-- 设置背景全透明 -->
         <item name="android:windowAnimationStyle">@style/loginDialogAnimation</item>
     </style>
+    <style name="dialog_uncancle" parent="android:style/Theme.Dialog">
+        <item name="android:windowNoTitle">true</item>
+        <!-- 设置title -->
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:windowFrame">@null</item>
+        <!-- 设置边框 -->
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="android:windowCloseOnTouchOutside">false</item>
+        <!-- 设置半透明 -->
+        <item name="android:windowFullscreen">true</item>
+        <!-- 设置全屏 -->
+        <!-- <item name="android:backgroundDimEnabled">false</item> -->  <!-- 设置背景全透明 -->
+        <item name="android:windowAnimationStyle">@style/loginDialogAnimation</item>
+    </style>
     <style name="loginDialogAnimation" parent="@android:style/Animation">
         <item name="android:windowEnterAnimation">@anim/window_enter</item>
         <item name="android:windowExitAnimation">@anim/window_exit</item>
