--- a/app/src/main/res/layout/activity_take_red.xml
+++ b/app/src/main/res/layout/activity_take_red.xml
@@ -79,24 +79,16 @@
             android:orientation="vertical"
             android:background="@mipmap/hongbaochibeijing"
             android:layout_height="wrap_content">
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="85dp">
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:background="@mipmap/fengkuangqianghongbao"
-                    android:layout_centerInParent="true"
-                    android:layout_height="wrap_content" />
-            </RelativeLayout>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:orientation="horizontal"
                 android:layout_marginLeft="15dp"
+                android:layout_marginTop="20dp"
                 android:layout_marginRight="15dp"
-                android:layout_height="90dp">
+                android:layout_height="80dp">
                 <RelativeLayout
                     android:layout_width="match_parent"
-                    android:layout_marginRight="5dp"
+                    android:layout_marginRight="20dp"
                     android:layout_weight="1"
                     android:background="@mipmap/zhongjianghongbao"
                     android:layout_height="match_parent">
@@ -114,8 +106,8 @@
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_weight="1"
-                    android:layout_marginRight="2.5dp"
-                    android:layout_marginLeft="2.5dp"
+                    android:layout_marginRight="10dp"
+                    android:layout_marginLeft="10dp"
                     android:background="@mipmap/zhongjianghongbao"
                     android:layout_height="match_parent">
                     <TextView
@@ -131,7 +123,7 @@
                 </RelativeLayout>
                 <RelativeLayout
                     android:layout_width="match_parent"
-                    android:layout_marginLeft="5dp"
+                    android:layout_marginLeft="20dp"
                     android:layout_weight="1"
                     android:background="@mipmap/zhongjianghongbao"
                     android:layout_height="match_parent">
@@ -151,7 +143,7 @@
                 android:layout_width="match_parent"
                 android:orientation="horizontal"
                 android:layout_marginLeft="20dp"
-                android:layout_marginTop="5dp"
+                android:layout_marginTop="15dp"
                 android:layout_marginRight="20dp"
                 android:layout_height="50dp">
                 <LinearLayout
@@ -245,14 +237,14 @@
             </LinearLayout>
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="5dp"
                 android:layout_height="110dp">
                 <RelativeLayout
                     android:id="@+id/rtl_red_percent"
-                    android:layout_width="110dp"
+                    android:layout_width="100dp"
                     android:layout_centerInParent="true"
-                    android:background="@mipmap/hongbaojindu"
-                    android:layout_height="100dp">
+                    android:background="@mipmap/zhongjianghongbao"
+                    android:layout_height="88dp">
                     <Views.RoundProgressBar
                         android:id="@+id/roundProgressBar"
                         android:layout_width="67dp"
@@ -270,55 +262,135 @@
                         android_custom:max="100"
                         android_custom:textSize="11sp"/>
                 </RelativeLayout>
-
             </RelativeLayout>
+            <!--<RelativeLayout-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_marginTop="60dp"-->
+                <!--android:layout_height="match_parent">-->
+                <!--<RelativeLayout-->
+                    <!--android:id="@+id/rtl_take_red"-->
+                    <!--android:layout_width="100dp"-->
+                    <!--android:background="@drawable/round_red_bg"-->
+                    <!--android:layout_alignParentLeft="true"-->
+                    <!--android:layout_marginLeft="15dp"-->
+                    <!--android:layout_height="30dp">-->
+                    <!--<TextView-->
+                        <!--android:layout_width="wrap_content"-->
+                        <!--android:text="抢红包"-->
+                        <!--android:layout_centerInParent="true"-->
+                        <!--android:textColor="@drawable/white2gray_seleclor"-->
+                        <!--android:textSize="17sp"-->
+                        <!--android:layout_height="wrap_content" />-->
+                <!--</RelativeLayout>-->
+                <!--<RelativeLayout-->
+                    <!--android:id="@+id/rtl_send_red"-->
+                    <!--android:layout_width="100dp"-->
+                    <!--android:layout_alignParentRight="true"-->
+                    <!--android:layout_marginRight="15dp"-->
+                    <!--android:background="@drawable/round_red_bg"-->
+                    <!--android:layout_height="30dp">-->
+                    <!--<TextView-->
+                        <!--android:layout_width="wrap_content"-->
+                        <!--android:text="发红包"-->
+                        <!--android:layout_centerInParent="true"-->
+                        <!--android:textColor="@drawable/white2gray_seleclor"-->
+                        <!--android:textSize="17sp"-->
+                        <!--android:layout_height="wrap_content" />-->
+                <!--</RelativeLayout>-->
+                <!--<TextView-->
+                    <!--android:id="@+id/tv_record"-->
+                    <!--android:layout_width="wrap_content"-->
+                    <!--android:padding="10dp"-->
+                    <!--android:text="红包详情"-->
+                    <!--android:textColor="@drawable/red2gray_seleclor"-->
+                    <!--android:layout_centerInParent="true"-->
+                    <!--android:layout_alignParentBottom="true"-->
+                    <!--android:layout_marginBottom="5dp"-->
+                    <!--android:textSize="18sp"-->
+                    <!--android:layout_height="wrap_content" />-->
+            <!--</RelativeLayout>-->
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_weight="1"
+                android:orientation="vertical"
+                android:layout_height="match_parent">
+               <RelativeLayout
+                   android:layout_width="match_parent"
+                   android:layout_weight="1"
+                   android:background="@mipmap/red_top"
+                   android:layout_height="match_parent">
+
+               </RelativeLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_weight="1"
+                    android:orientation="vertical"
+                    android:background="@mipmap/red_buttom"
+                    android:layout_height="match_parent">
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_weight="1"
+                        android:layout_height="match_parent">
+                      <RelativeLayout
+                          android:layout_width="100dp"
+                          android:layout_weight="1"
+                          android:layout_height="30dp">
+                          <RelativeLayout
+                              android:id="@+id/rtl_take_red"
+                              android:layout_width="90dp"
+                              android:layout_alignParentRight="true"
+                              android:layout_marginRight="10dp"
+                              android:background="@drawable/round_oranges_bg"
+                              android:layout_height="25dp">
+                             <TextView
+                                 android:layout_width="wrap_content"
+                                 android:text="抢红包"
+                                 android:layout_centerInParent="true"
+                                 android:textColor="@drawable/white2gray_seleclor"
+                                 android:layout_height="wrap_content" />
+                          </RelativeLayout>
+                      </RelativeLayout>
+                        <RelativeLayout
+                            android:layout_width="100dp"
+                            android:layout_weight="1"
+                            android:layout_height="30dp">
+                            <RelativeLayout
+                                 android:id="@+id/rtl_send_red"
+                                android:layout_width="90dp"
+                                android:background="@drawable/round_oranges_bg"
+                                android:layout_marginLeft="10dp"
+                                android:layout_alignParentLeft="true"
+                                android:layout_height="25dp">
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:text="发红包"
+                                    android:layout_centerInParent="true"
+                                    android:textColor="@drawable/white2gray_seleclor"
+                                    android:layout_height="wrap_content" />
+                            </RelativeLayout>
+                        </RelativeLayout>
+                    </LinearLayout>
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_weight="1"
+                        android:orientation="horizontal"
+                        android:layout_height="match_parent">
+                        <RelativeLayout
+                            android:id="@+id/rtl_red_detail"
+                            android:layout_width="95dp"
+                            android:background="@drawable/round_oranges_bg"
+                            android:layout_centerInParent="true"
+                            android:layout_height="25dp">
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:text="红包详情"
+                                android:layout_centerInParent="true"
+                                android:textColor="@drawable/white2gray_seleclor"
+                                android:layout_height="wrap_content" />
+                        </RelativeLayout>
+                    </RelativeLayout>
+                </LinearLayout>
+            </LinearLayout>
         </LinearLayout>
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_marginTop="5dp"
-            android:layout_height="match_parent">
-            <RelativeLayout
-                android:id="@+id/rtl_take_red"
-                android:layout_width="100dp"
-                android:background="@drawable/round_red_bg"
-                android:layout_alignParentLeft="true"
-                android:layout_marginLeft="15dp"
-                android:layout_height="30dp">
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:text="抢红包"
-                    android:layout_centerInParent="true"
-                    android:textColor="@drawable/white2gray_seleclor"
-                    android:textSize="17sp"
-                    android:layout_height="wrap_content" />
-            </RelativeLayout>
-            <RelativeLayout
-                android:id="@+id/rtl_send_red"
-                android:layout_width="100dp"
-                android:layout_alignParentRight="true"
-                android:layout_marginRight="15dp"
-                android:background="@drawable/round_red_bg"
-                android:layout_height="30dp">
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:text="发红包"
-                    android:layout_centerInParent="true"
-                    android:textColor="@drawable/white2gray_seleclor"
-                    android:textSize="17sp"
-                    android:layout_height="wrap_content" />
-            </RelativeLayout>
-            <TextView
-                android:id="@+id/tv_record"
-                android:layout_width="wrap_content"
-                android:padding="10dp"
-                android:text="红包详情"
-                android:textColor="@drawable/red2gray_seleclor"
-                android:layout_centerInParent="true"
-                android:layout_alignParentBottom="true"
-                android:layout_marginBottom="5dp"
-                android:textSize="18sp"
-                android:layout_height="wrap_content" />
-        </RelativeLayout>
     </LinearLayout>
 </LinearLayout>
