--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -14,18 +14,31 @@
         android:background="@color/red"
         android:orientation="horizontal"
         android:layout_height="160dp">
-        <RelativeLayout
+        <LinearLayout
             android:layout_width="120dp"
             android:layout_marginTop="20dp"
+            android:orientation="vertical"
             android:layout_height="match_parent">
            <Views.CircleImageView
                android:id="@+id/img_head"
                android:layout_width="80dp"
-               android:layout_centerInParent="true"
+               android:layout_weight="1"
+               android:layout_marginTop="15dp"
+                android:layout_gravity="center"
                android:src="@mipmap/ic_empty"
                android:layout_height="80dp">
            </Views.CircleImageView>
-        </RelativeLayout>
+            <TextView
+                android:id="@+id/tv_userid"
+                android:layout_weight="1"
+                android:textSize="13sp"
+                android:textColor="@color/white"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:layout_width="wrap_content"
+                android:text="加载中"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_weight="1"
