--- a/app/src/main/res/layout/item_select_red_time.xml
+++ b/app/src/main/res/layout/item_select_red_time.xml
@@ -1,26 +1,69 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
-    android:paddingLeft="13dp"
-    android:paddingRight="13dp"
+    android:paddingLeft="3dp"
+    android:paddingRight="3dp"
     android:orientation="vertical"
     android:layout_height="wrap_content">
+     <FrameLayout
+         android:layout_width="wrap_content"
+         android:layout_height="wrap_content">
+         <LinearLayout
+             android:id="@+id/ll_red_running"
+             android:layout_width="wrap_content"
+             android:orientation="vertical"
+             android:background="@mipmap/red_running"
+             android:layout_height="wrap_content">
+             <TextView
+                 android:id="@+id/tv_time"
+                 android:layout_width="wrap_content"
+                 android:layout_marginTop="3dp"
+                 android:textSize="16sp"
+                 android:gravity="center"
+                 android:layout_weight="1"
+                 android:textColor="@color/red"
+                 android:text="18:00"
+                 android:layout_gravity="center"
+                 android:layout_height="wrap_content" />
+             <TextView
+                 android:id="@+id/tv_state"
+                 android:gravity="center"
+                 android:layout_marginBottom="3dp"
+                 android:layout_width="wrap_content"
+                 android:text="进行中"
+                 android:layout_weight="1"
+                 android:textSize="16sp"
+                 android:textColor="@color/red"
+                 android:layout_gravity="center"
+                 android:layout_height="wrap_content" />
+         </LinearLayout>
+         <!--<LinearLayout-->
+             <!--android:id="@+id/ll_red_unrunning"-->
+             <!--android:layout_width="wrap_content"-->
+             <!--android:orientation="vertical"-->
+             <!--android:layout_height="wrap_content">-->
+             <!--<TextView-->
+                 <!--android:layout_width="wrap_content"-->
+                 <!--android:layout_marginTop="3dp"-->
+                 <!--android:textSize="16sp"-->
+                 <!--android:gravity="center"-->
+                 <!--android:layout_weight="1"-->
+                 <!--android:textColor="@color/black"-->
+                 <!--android:text="18:00"-->
+                 <!--android:layout_gravity="center"-->
+                 <!--android:layout_height="wrap_content" />-->
+             <!--<TextView-->
+                 <!--android:gravity="center"-->
+                 <!--android:layout_marginBottom="3dp"-->
+                 <!--android:layout_width="wrap_content"-->
+                 <!--android:text="进行中"-->
+                 <!--android:layout_weight="1"-->
+                 <!--android:textSize="16sp"-->
+                 <!--android:textColor="@color/black"-->
+                 <!--android:layout_gravity="center"-->
+                 <!--android:layout_height="wrap_content" />-->
+         <!--</LinearLayout>-->
+     </FrameLayout>
 
-    <TextView
-        android:id="@+id/tv_time"
-        android:layout_width="wrap_content"
-        android:textSize="16sp"
-        android:padding="1dp"
-        android:textColor="@color/black"
-        android:layout_gravity="center"
-        android:layout_height="wrap_content" />
-    <TextView
-        android:id="@+id/tv_state"
-        android:layout_width="wrap_content"
-        android:padding="1dp"
-        android:textSize="16sp"
-        android:textColor="@color/black"
-        android:layout_gravity="center"
-        android:layout_height="wrap_content" />
 
 </LinearLayout>
