--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,7 @@
     <color name="red">#E83828</color>
     <color name="reds">#eb4f38</color>
     <color name="orange">#E78F3C</color>
+    <color name="oranges">#F39800</color>
     <color name="dark_red">#f7000c</color>
     <color name="light_red">#ffb5b5</color>
     <color name="black">#000000</color>
